RESOLVED FIXED41111
[WinCairo] Rendering of themed elements on a layer with opacity produces nothing
https://bugs.webkit.org/show_bug.cgi?id=41111
Summary [WinCairo] Rendering of themed elements on a layer with opacity produces nothing
Martin Robinson
Reported 2010-06-23 16:35:08 PDT
Created attachment 59576 [details] Failing test case Not only does the form element not render, even text which follows the form element fails to render. I've attached a test case that shows the issue I'm seeing.
Attachments
Failing test case (247 bytes, text/html)
2010-06-23 16:35 PDT, Martin Robinson
no flags
Rendering of test case (15.00 KB, image/png)
2010-06-23 16:38 PDT, Martin Robinson
no flags
Patch (2.39 KB, patch)
2010-06-23 16:50 PDT, Martin Robinson
no flags
Patch including manual test and ChangeLog fix (3.42 KB, patch)
2010-06-25 17:17 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-06-23 16:38:33 PDT
Created attachment 59577 [details] Rendering of test case
Martin Robinson
Comment 2 2010-06-23 16:45:56 PDT
There appears to be two problems in GraphicsContext::releaseWindowsContext: 1. A cairo_save()/cairo_restore() pair is not used around the part of the method modifying the transformation matrix of the GraphicsContext's cairo surface. 2. The destination coordinates of the paint are affected by the scaling in the transformation matrix. I'm not sure if this is Cairo's expected behavior, but setting the destination coordinates during the call to cairo_set_source_surface() fixes the problem.
Martin Robinson
Comment 3 2010-06-23 16:50:29 PDT
Brent Fulgham
Comment 4 2010-06-24 09:38:02 PDT
This patch looks good to me.
Adam Roben (:aroben)
Comment 5 2010-06-25 09:36:26 PDT
Comment on attachment 59579 [details] Patch > + Functionality unchanged, no new tests. How can this be true? You're fixing a painting bug; that sounds like changed functionality to me. > + * platform/graphics/win/GraphicsContextCairoWin.cpp: > + (WebCore::GraphicsContext::releaseWindowsContext): > + Preform a cairo_save() and a cairo_restore() before modifying the transformation > + matrix of the Cairo surface. I think you mean "around", not "before". It's great to have detailed ChangeLog comments like these! The code change looks fine, but I'm still confused about the "Functionality unchanged" part.
Martin Robinson
Comment 6 2010-06-25 17:17:32 PDT
Created attachment 59815 [details] Patch including manual test and ChangeLog fix
Martin Robinson
Comment 7 2010-06-25 17:31:44 PDT
Comment on attachment 59815 [details] Patch including manual test and ChangeLog fix > +<p><b>BUG ID:</b> <a href="https://bugs.webkit.org/show_bug.cgi?id=41113">Bugzilla bug 41113</a> [WinCairo] Text box backgrounds do not render in partially opaque layers</p> This line is incorrect. If this version of the patch is otherwise satisfactory to the reviewer, I will change it to: > +<p><b>BUG ID:</b> <a href="https://bugs.webkit.org/show_bug.cgi?id=41111">Bugzilla bug 41113</a> [WinCairo] Rendering of themed elements on a layer with opacity produces nothing</p>
Adam Roben (:aroben)
Comment 8 2010-06-28 06:47:13 PDT
Comment on attachment 59815 [details] Patch including manual test and ChangeLog fix r=me
Martin Robinson
Comment 9 2010-06-28 09:01:03 PDT
Comment on attachment 59815 [details] Patch including manual test and ChangeLog fix Clearing flags on attachment: 59815 Committed r62011: <http://trac.webkit.org/changeset/62011>
Martin Robinson
Comment 10 2010-06-28 09:01:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.