2010-06-28  Martin Robinson  <martin.james.robinson@gmail.com>

Reviewed by Adam Roben.

        [WinCairo] Rendering of themed elements on a layer with opacity produces nothing
        https://bugs.webkit.org/show_bug.cgi?id=41111

        Tests:
         manual-tests/partially-opaque-form-elements.html

        * platform/graphics/win/GraphicsContextCairoWin.cpp:
        (WebCore::GraphicsContext::releaseWindowsContext):
        Preform a cairo_save() and a cairo_restore() around code modifying the transformation
        matrix of the Cairo surface. Also set the destination coordinates before adjusting
        the transformation matrix scale, so that the destination coordinates are not scaled
        as well.

Canonical link: https://commits.webkit.org/52991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62011 268f45cc-cd09-0410-ab3c-d52691b4dbfc